--- a/app/src/main/res/layout/activity_rekom.xml
+++ b/app/src/main/res/layout/activity_rekom.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RekomActivity">
+    tools:context=".ui.RekomActivity"
+    android:background="@drawable/background_page">
 
     <TextView
         android:id="@+id/tv_preview_photo"
