--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layered_waves_background"
-    tools:context=".SignUpActivity">
+    tools:context=".ui.SignUpActivity">
 
     <TextView
         android:id="@+id/titleTextView"
