--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,84 +4,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".ui.WelcomeActivity"
-    android:background="@drawable/background">
+    tools:layout_editor_absoluteX="-1dp"
+    tools:layout_editor_absoluteY="-2dp">
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="265dp"
         android:layout_height="54dp"
+        android:layout_marginTop="16dp"
         android:text="@string/slogan"
         android:textAlignment="center"
-        android:textColor="@color/md_theme_light_onBackground"
+        android:textColor="@color/md_theme_dark_primaryContainer"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="301dp"
-        android:layout_height="225dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        android:layout_width="378dp"
+        android:layout_height="290dp"
+        android:layout_marginTop="85dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.828"
         app:srcCompat="@drawable/makeup_illust" />
 
 
     <LinearLayout
-        android:id="@+id/loginGroup"
+        android:id="@+id/ll_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="191dp"
-        tools:layout_editor_absoluteY="643dp">
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="60dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_create"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:text="@string/login_text_desc"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:id="@+id/loginArrow"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginBottom="15dp"
-            android:contentDescription="@string/login_arrow"
-            app:srcCompat="@drawable/arrow" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/signupGroup"
-        android:layout_width="175dp"
-        android:layout_height="46dp"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="573dp">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="16dp"
             android:text="@string/create_new_account"
             android:textColor="@color/white"
-            android:textColorLink="@color/black" />
+            android:textColorLink="@color/black"
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/signupArrow"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginBottom="75dp"
             android:contentDescription="@string/signup_arrow"
-            app:srcCompat="@drawable/invert_arrow" />
+            app:srcCompat="@drawable/create_icon" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/ll_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="12dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/ll_create"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/tv_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="18dp"
+            android:text="@string/login_text_desc"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/loginArrow"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="@string/login_arrow"
+            app:srcCompat="@drawable/login_icon" />
     </LinearLayout>
 
 
