--- a/app/src/main/res/layout/activity_rekom.xml
+++ b/app/src/main/res/layout/activity_rekom.xml
@@ -169,10 +169,8 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="34dp"
                 android:src="@drawable/circle_24"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_circle2"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/iv_circle2"
                 app:layout_constraintTop_toTopOf="@+id/iv_circle2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -206,11 +204,11 @@
         android:id="@+id/cv_product1"
         android:layout_width="130dp"
         android:layout_height="150dp"
-        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toStartOf="@+id/cv_product2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_recommen_product">
 
@@ -241,11 +239,11 @@
         android:id="@+id/cv_product2"
         android:layout_width="130dp"
         android:layout_height="150dp"
-        android:layout_marginStart="8dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="@+id/cv_product1"
+        app:layout_constraintEnd_toStartOf="@+id/cv_product3"
         app:layout_constraintStart_toEndOf="@+id/cv_product1"
         app:layout_constraintTop_toTopOf="@+id/cv_product1">
 
@@ -256,14 +254,14 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/iv_product1"
+                android:id="@+id/iv_product2"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="15dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tv_product1"
+                android:id="@+id/tv_product2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -276,7 +274,6 @@
         android:id="@+id/cv_product3"
         android:layout_width="130dp"
         android:layout_height="150dp"
-        android:layout_marginEnd="16dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true"
@@ -292,14 +289,14 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/iv_product1"
+                android:id="@+id/iv_product3"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="15dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tv_product1"
+                android:id="@+id/tv_product3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
