add Loading and some desain

--- a/app/src/main/res/layout/activity_rekom.xml
+++ b/app/src/main/res/layout/activity_rekom.xml
@@ -86,8 +86,8 @@
 
         <ImageView
             android:id="@+id/iv_skintone"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="32dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_skintone"
             app:layout_constraintStart_toEndOf="@+id/tv_skintone"
@@ -196,7 +196,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
-            android:text="Recommendation Product"
+            android:text="Recommendation Make up"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -206,8 +206,9 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_product1"
-            android:layout_width="130dp"
+            android:layout_width="115dp"
             android:layout_height="150dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             app:cardCornerRadius="4dp"
             app:cardElevation="4dp"
@@ -241,7 +242,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_product2"
-            android:layout_width="130dp"
+            android:layout_width="115dp"
             android:layout_height="150dp"
             app:cardCornerRadius="4dp"
             app:cardElevation="4dp"
@@ -276,8 +277,9 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_product3"
-            android:layout_width="130dp"
+            android:layout_width="115dp"
             android:layout_height="150dp"
+            android:layout_marginEnd="8dp"
             app:cardCornerRadius="4dp"
             app:cardElevation="4dp"
             app:cardUseCompatPadding="true"
